[FIX] WelcomeToast progressbar overflow

--- a/app/assets/scss/components/_welcome-toast.scss
+++ b/app/assets/scss/components/_welcome-toast.scss
@@ -11,6 +11,7 @@
   padding: 1.25rem 1.25rem 1rem;
   background-color: rgba(1, 5, 17, 0.96);
   border-radius: 1rem;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 0.6rem;
